--- a/index.css
+++ b/index.css
@@ -34,6 +34,12 @@ header{
     display: flex;
     height: 100%;
     width: 100%;
+    background-image: url('https://images.unsplash.com/photo-1692271861487-6ae09612aeab?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Zm9yZXN0JTIwYmx1ciUyMGxpZ2h0JTIwZ3JlZW58ZW58MHx8MHx8fDA%3D');
+    
+}
+.header-text{
+    color:rgb(113, 173, 118);
+    text-shadow:1 0.8 0.2em wheat;
 }
 
 #header-links-container{
@@ -52,12 +58,11 @@ header{
 
 aside{
     grid-area:aside;
-    background-image: url('https://images.unsplash.com/photo-1506126613408-eca07ce68773?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fE1FRElUQSVDMyU4NyVDMyU4M098ZW58MHx8MHx8fDA%3D');
-    background-repeat: no-repeat;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    width: 30%;
 }
 
 .content{
@@ -65,6 +70,7 @@ aside{
     margin: auto;
     align-items: center;
     justify-content: center;
+    width: 70%;
 }
 footer{
     grid-column: 1/4;
