--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ footer{
 
 
 h1,h2{
-    color: rgba(76, 121, 80, 1);
+    color:brown;
 }
 h3{
     font-family: Verdana, Geneva, Tahoma, sans-serif, monospace;
