--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ h1,h2{
 }
 h3{
     font-family: Verdana, Geneva, Tahoma, sans-serif, monospace;
-    color: rgba(165, 42, 42, 0.486);
+    color: brown;
 }
 
 h4{
