--- a/index.css
+++ b/index.css
@@ -1,36 +1,32 @@
-body {
-    margin: 0;
+.contact-section {
+    padding: 1rem;
+    text-align: center;
+}
+
+.contact-icons {
     display: flex;
-    height: 100vh;
-    width: 100%;
-    justify-content: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(255, 252, 246);
-    letter-spacing: 0.1em;
-    scroll-behavior: smooth;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
+    margin-top: 1rem;
 }
 
-.bodoni-moda-uniquifier {
-    font-family: "Bodoni Moda", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: 20% 1fr 10%;
-    grid-template-areas: 
-        'header header'
-        'aside content'
-        'footer footer';
-    width: 100%;
-}
-
-header {
-    grid-area: header;
+.contact-item {
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-image: url('https://images.unsplash.com/photo-1692271861487-6ae09612aeab?w=500&auto
+    gap: 10px;
+    font-weight: bold;
+}
+
+.contact-item img {
+    height: 30px;
+    width: auto;
+    object-fit: contain;
+}
+
+@media (min-width: 768px) {
+    .contact-icons {
+        flex-direction: row;
+        justify-content: center;
+    }
+}
