--- a/index.css
+++ b/index.css
@@ -69,8 +69,13 @@ header {
     text-align: left;
 }
 
-h1, h2, h3, h4 {
+h1, h2 {
     color: brown; /* Títulos em marrom */
+}
+
+h3, h4 {
+    color: brown; /* Títulos em marrom */
+    margin-bottom: 10px;
 }
 
 ul {
@@ -94,6 +99,7 @@ p {
 /* Imagem do corpo */
 .image-body-content {
     width: 100%;
+    max-width: 100%;
     height: auto;
     border-radius: 8px;
     margin-top: 20px;
@@ -117,23 +123,19 @@ section.contact-section {
 
 .contact-icons {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 20px;
-    gap: 20px; /* Espaçamento entre os ícones */
 }
 
 .contact-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50px; /* Ajustado para garantir o tamanho correto */
-    justify-content: center;
 }
 
 .contact-item img {
-    width: 50px; /* Imagem do ícone ajustada */
-    height: 50px; /* Imagem do ícone ajustada */
-    object-fit: contain;
+    width: 40px;
+    height: 40px;
 }
 
 .contact-item span {
@@ -166,8 +168,8 @@ section.contact-section {
     }
 
     .contact-item img {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
     }
 
     .contact-item span {
@@ -193,8 +195,8 @@ section.contact-section {
     }
 
     .contact-item img {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
     }
 
     .contact-item span {
