--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ header {
     padding: 40px 0;
     background-image: 
         linear-gradient(rgba(0, 0, 0, 0.10), rgba(0, 0, 0, 0.10)),
-        url('https://plus.unsplash.com/premium_photo-1682629632657-4ac307921295?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8YmVhY2h8ZW58MHx8MHx8fDA%3D');
+        url('');
     background-size: cover;
     background-position: center;
     color: white;
